--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,78 @@
+absl-py==2.1.0
+astunparse==1.6.3
 certifi==2024.8.30
 charset-normalizer==3.3.2
 contourpy==1.3.0
 cycler==0.12.1
 filelock==3.13.1
+flatbuffers==24.3.25
 fonttools==4.54.1
 fsspec==2024.2.0
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.66.2
+h5py==3.12.1
 idna==3.10
 Jinja2==3.1.3
+keras==3.5.0
 kiwisolver==1.4.7
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.2
+mdurl==0.1.2
+ml-dtypes==0.4.1
 mpmath==1.3.0
+namex==0.0.8
 networkx==3.2.1
-numpy==1.26.3
-nvidia-cublas-cu12==12.4.2.65
-nvidia-cuda-cupti-cu12==12.4.99
-nvidia-cuda-nvrtc-cu12==12.4.99
-nvidia-cuda-runtime-cu12==12.4.99
+numpy==2.1.2
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
 nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.0.44
-nvidia-curand-cu12==10.3.5.119
-nvidia-cusolver-cu12==11.6.0.99
-nvidia-cusparse-cu12==12.3.0.142
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.4.99
-nvidia-nvtx-cu12==12.4.99
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 opencv-python==4.10.0.84
+opt_einsum==3.4.0
+optree==0.12.1
 packaging==24.1
 pandas==2.2.3
 pillow==10.2.0
+protobuf==4.25.5
 psutil==6.0.0
 py-cpuinfo==9.0.0
+Pygments==2.18.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
+rich==13.9.1
 scipy==1.14.1
 seaborn==0.13.2
 setuptools==75.1.0
 six==1.16.0
-sympy==1.12
-torch==2.4.1+cu124
-torchaudio==2.4.1+cu124
-torchvision==0.19.1+cu124
+sympy==1.13.1
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+termcolor==2.4.0
+torch==2.5.0
+torchaudio==2.5.0
+torchvision==0.20.0
 tqdm==4.66.5
-triton==3.0.0
+triton==3.1.0
 typing_extensions==4.9.0
 tzdata==2024.2
-ultralytics==8.2.101
-ultralytics-thop==2.0.8
+ultralytics==8.3.20
+ultralytics-thop==2.0.9
 urllib3==2.2.3
+Werkzeug==3.0.4
 wheel==0.44.0
+wrapt==1.16.0
