--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,74 @@
 absl-py==2.1.0
+accelerate==1.2.1
+addict==2.4.0
+albucore==0.0.21
+albumentations==1.4.23
+aliyun-python-sdk-core==2.16.0
+aliyun-python-sdk-kms==2.16.5
+annotated-types==0.7.0
+appdirs==1.4.4
+args==0.1.0
+asttokens==3.0.0
 astunparse==1.6.3
-certifi==2024.8.30
-charset-normalizer==3.3.2
-contourpy==1.3.0
+bitsandbytes==0.45.0
+certifi==2024.12.14
+cffi==1.17.1
+cfgv==3.4.0
+charset-normalizer==3.4.0
+click==8.1.8
+clint==0.5.1
+colorama==0.4.6
+contourpy==1.3.1
+coverage==7.6.9
+crcmod==1.7
+cryptography==44.0.0
 cycler==0.12.1
-filelock==3.13.1
+debugpy==1.8.11
+dill==0.3.9
+distlib==0.3.9
+efficientnet_pytorch==0.7.1
+einops==0.8.0
+eval_type_backport==0.2.2
+filelock==3.14.0
+filterpy==1.4.5
 flatbuffers==24.3.25
-fonttools==4.54.1
-fsspec==2024.2.0
+fonttools==4.55.3
+fsspec==2024.12.0
+ftfy==6.3.1
+future==1.0.0
 gast==0.6.0
 google-pasta==0.2.0
-grpcio==1.66.2
+grad-cam==1.5.4
+grpcio==1.68.1
 h5py==3.12.1
+huggingface-hub==0.27.0
+icecream==2.1.3
+identify==2.6.3
 idna==3.10
-Jinja2==3.1.3
-keras==3.5.0
+imageio==2.36.1
+iniconfig==2.0.0
+ipython==8.31.0
+Jinja2==3.1.5
+jmespath==0.10.0
+joblib==1.4.2
+keras==3.7.0
 kiwisolver==1.4.7
+lazy_loader==0.4
 libclang==18.1.1
+llvmlite==0.43.0
+lmdb==1.5.1
 Markdown==3.7
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.2
+MarkupSafe==3.0.2
+matplotlib==3.10.0
 mdurl==0.1.2
-ml-dtypes==0.4.1
+ml_dtypes==0.5.0
+model-index==0.1.11
 mpmath==1.3.0
 namex==0.0.8
-networkx==3.2.1
-numpy==2.1.2
+networkx==3.4.2
+nodeenv==1.9.1
+numpy==2.2.1
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu12==12.4.127
@@ -39,40 +81,71 @@ nvidia-cusparse-cu12==12.3.1.170
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
+openai-clip==1.0.1
 opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
+opendatalab==0.0.10
+openmim==0.3.9
+openxlab==0.1.2
 opt_einsum==3.4.0
-optree==0.12.1
-packaging==24.1
+optree==0.13.1
+ordered-set==4.1.0
+oss2==2.17.0
 pandas==2.2.3
-pillow==10.2.0
-protobuf==4.25.5
-psutil==6.0.0
+pillow==11.0.0
+pluggy==1.5.0
+pre_commit==4.0.1
+protobuf==5.29.2
+psutil==6.1.1
 py-cpuinfo==9.0.0
-Pygments==2.18.0
-pyparsing==3.1.4
-python-dateutil==2.9.0.post0
-pytz==2024.2
+pycocotools==2.0.8
+pycparser==2.22
+pycryptodome==3.21.0
+pydantic==2.10.4
+pydantic_core==2.27.2
+pyparsing==3.2.0
+pytest==8.3.4
+pytorch-wavelets==1.3.0
+pytz==2023.4
+PyWavelets==1.8.0
 PyYAML==6.0.2
-requests==2.32.3
-rich==13.9.1
+regex==2024.11.6
+requests==2.28.2
+rich==13.4.2
+safetensors==0.4.5
+scikit-image==0.25.0
+scikit-learn==1.6.0
 scipy==1.14.1
 seaborn==0.13.2
-setuptools==75.1.0
-six==1.16.0
+sentencepiece==0.2.0
+setuptools==60.2.0
+simsimd==6.2.1
+six==1.17.0
+stack-data==0.6.3
+stringzilla==3.11.2
 sympy==1.13.1
+tabulate==0.9.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
-termcolor==2.4.0
-torch==2.5.0
-torchaudio==2.5.0
-torchvision==0.20.0
-tqdm==4.66.5
+termcolor==2.5.0
+thop==0.1.1.post2209072238
+threadpoolctl==3.5.0
+tidecv==1.0.1
+tifffile==2024.12.12
+timm==1.0.12
+tokenizers==0.21.0
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
+tqdm==4.65.2
+transformers==4.47.1
 triton==3.1.0
-typing_extensions==4.9.0
+ttach==0.0.3
 tzdata==2024.2
-ultralytics==8.3.20
-ultralytics-thop==2.0.9
-urllib3==2.2.3
-Werkzeug==3.0.4
-wheel==0.44.0
-wrapt==1.16.0
+ultralytics-thop==2.0.13
+urllib3==1.26.20
+virtualenv==20.28.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.0
+yapf==0.43.0
